--- a/css/style.less
+++ b/css/style.less
@@ -1,6 +1,22 @@
 @import "base";
 @import "navigation";
 
+.header {
+
+  // 标题
+  .title {
+    padding: 40px;
+    position: relative;
+    top: -50px;
+    text-align: center;
+  }
+
+  // 标题字体加大
+  h1 {
+    font-size: 40px;
+  }
+}
+
 .main {
   padding: 20px 20px 120px 20px;
   border: #2ecd5f solid 2px;
